# ocrdownloader2

./: .gitignore  CHANGELOG.md  LICENCE.rst  README.rst  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: linting.yml  release.yml
ocrdownloader2/: __init__.py  cli.py  crawler.py  downloader.py  gui.py  track.py
ocrdownloader2/data/: track.py
ocrdownloader2/downloaders/: aria2_downloader.py  downloader.py  options.py  python_downloader.py
tests/: test_cli.py  test_crawler.py  test_downloader.py  test_ocrdownloader2.py
tests/data/: page_response.html
tests/downloaders/: test_aria2_downloader.py
