[tool.poetry]
name = "ocrdownloader2"
version = "2.0.2"
description = "Download songs from OC ReMix before packs are available"
authors = ["Anthony Porthouse <anthony@porthou.se>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.3"
click = "^8.0.0"
html5lib = "^1.1"
requests = "^2.25.1"
importlib-metadata = {version = "^4.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.5b1"
requests-mock = "^1.9.2"
coverage = "^5.5"

[tool.poetry.scripts]
ocrdownloader = "ocrdownloader2.cli:cli"

[tool.black]
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'

[tool.coverage.run]
source = ['ocrdownloader2']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
